deploy/yamls/flightpathtestrepo-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: flightpathtestrepo
  name: flightpathtestrepo
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: flightpathtestrepo
  type: ClusterIP
status:
  loadBalancer: {}
